# django-helpdesk

./: main.py  pyproject.toml
helpdesk/: email.py
helpdesk/templates/helpdesk/: navigation-header.html  ticket.html
helpdesk/templates/helpdesk/en/: email_html_base.html  email_text_footer.txt
ilifu_helpdesk/: manage.py  patches.py
ilifu_helpdesk/ilifu/: apps.py  models.py  utils.py  views.py
ilifu_helpdesk/ilifu/static/helpdesk/: helpdesk-customize.css
ilifu_helpdesk/ilifu/templates/helpdesk/: dashboard.html  navigation-header.html  recent_activity.html  ticket.html  ticket.html.backup  ticket_desc_table.html  ticket_list.html
ilifu_helpdesk/ilifu/templates/helpdesk/include/: tickets.html
ilifu_helpdesk/ilifu_helpdesk/: asgi.py  common.py  models.py  settings.py  settings.py.template  urls.py  views.py  wsgi.py
ilifu_helpdesk/static/helpdesk/: helpdesk-customize.css
ilifu_helpdesk/templates/: attribution.html  base-head.html
